--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "build": "webpack --config webpack.config.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
